[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "shuttleasgi"
dynamic = ["version"]
authors = [{ name = "Roberto Prevato", email = "roberto.prevato@gmail.com" }]
maintainers = [{ name = "Christian Heru Mes", email = "chris@shuttleai.app" }]
description = "Fork of BlackSheep, the ex fastest web framework for Python asyncio"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Environment :: Web Environment",
    "Operating System :: OS Independent",
    "Framework :: AsyncIO",
]
keywords = ["shuttleasgi", "web framework", "asyncio", "blacksheep", "shuttleai"]
dependencies = [
    "certifi>=2025.4.26",
    "guardpost>=1.0.2",
    "rodi~=2.0.8",
    "essentials>=1.1.4,<2.0",
    "essentials-openapi>=1.2.0,<2.0",
    "python-dateutil~=2.9.0",
    "itsdangerous~=2.2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["shuttleasgi*"]

[tool.setuptools.dynamic]
version = { attr = "shuttleasgi.__version__" }

[project.optional-dependencies]
jinja = ["Jinja2~=3.1.6"]
full = [
    "cryptography>=45.0.2,<46.0.0",
    "PyJWT~=2.10.1",
    "websockets~=15.0.1",
    "Jinja2~=3.1.6",
]
cython = ["httptools>=0.6.4"]
purepython = ["h11==0.16.0"]

[project.urls]
"Website" = "https://shuttleai.app"
"Homepage" = "https://github.com/shuttleai/ShuttleASGI"
"Bug Tracker" = "https://github.com/shuttleai/shuttleasgi/issues"
